# MelonOS

./: .gitignore  Cargo.toml  LICENSE  README.md  build.bat  link.ld
kernel/: Cargo.toml
kernel/.cargo/: config.toml  config.toml.aarch64  config.toml.x86_64
kernel/src/: main.rs
uefi_bootloader/: Cargo.toml
uefi_bootloader/src/: aarch64.rs  common.rs  elf.rs  macros.rs  main.rs  x86_64.rs
uefi_bootloader/src/.cargo/: config.toml
